--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,8 +23,8 @@
   <nav class="bg-black border-b border-gray-800 px-6 py-4 flex justify-between items-center">
     <div class="text-yellow-400 font-bold text-2xl tracking-wider">SAND WORLD</div>
     <ul class="flex space-x-6 text-sm font-mono">
-      <li><a href="{{ url_for('index') }}" class="text-gray-300 hover:text-yellow-400">Home</a></li>
-      <li><a href="{{ url_for('tournament') }}" class="text-gray-300 hover:text-yellow-400">OSU Tournament</a></li>
+      <li><a href="{{ url_for('public.index') }}" class="text-gray-300 hover:text-yellow-400">Home</a></li>
+      <li><a href="{{ url_for('public.tournament') }}" class="text-gray-300 hover:text-yellow-400">OSU Tournament</a></li>
     </ul>
   </nav>
 
